# mas_knowledge_base

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  setup.py  test.py
.github/: CODEOWNERS
common/assertions/: test_apartment.yaml
common/definitions/: test_apartment.yaml
common/mas_knowledge_utils/: ABox.py  abox_yaml_loader.py  domestic_ontology_interface.py  ontology_query_interface.py  tbox_yaml_loader.py
common/ontology/: apartment.owl  apartment_go_2019.owl  homelab.owl  sample.owl  sample_no_class_prefix.owl  sample_no_namespace.owl
common/tests/: ontology_query_interface_unit_tests.py
examples/: ontology_interface.ipynb
ros/scripts/: export_ontology_to_kb
ros/src/mas_knowledge_base/: domestic_kb_interface.py  knowledge_base_interface.py
