<?xml version="1.0"?>
<package format="2">
  <name>mas_knowledge_base</name>
  <version>0.0.0</version>
  <description>A package for knowledge base interaction and management</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="robotics@h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
